--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.application.name=demo
+server.port=${PORT:8080}
 
-
-spring.flyway.enabled=false
-#spring.datasource.url=jdbc:mysql://localhost:3306/mi_base_de_datos1
-spring.datasource.url=jdbc:mysql://localhost:3306/mi_base_de_datos1?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.flyway.enabled=true
 spring.jpa.show-sql=true
@@ -14,37 +11,20 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-#create-drop
-
-#1️⃣ Desactiva la autenticación en memoria (inMemoryUserDetailsManager)
-
 
 spring.security.user.enabled=false
 
-
-
 # Clave JWT
-
-security.jwt.secret=claveSuperSecretaConAlMenos32Caracteres123!
-security.jwt.expiration=86400000
-security.jwt.refresh-expiration=86400000  
-# 24 horas en milisegundos
-
+security.jwt.secret=${JWT_SECRET}
+security.jwt.expiration=${JWT_EXPIRATION}
+security.jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
 spring.jpa.open-in-view=false  
-#Spring mantiene cerrada la sesión de la base de datos durante la renderización de vistas
-
 
 spring.jmx.enabled=true
 management.endpoints.jmx.exposure.include=*
 
-
-
-
-
-
 spring.cloud.vault.enabled=false
-
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
